# deep_vision

./: .env.example  .gitignore  AGENT_QUICKSTART.md  AGENT_TUTORIAL.md  ARCHITECTURE.md  CHECKLIST.md  CONTRIBUTING.md  DEPLOYMENT.md  EXAMPLES.md  IMPLEMENTATION.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  RUNNING_GUIDE.md  START_HERE.md  SUMMARY.md  TESTING.md  TIPS.md  VIETNAMESE.md  check_cuda.py  demo.py  demo_agents.py  gitignore.txt  pyproject.toml  requirements-local-fixed.txt  requirements-local.txt  requirements.txt  server.py  setup.py  setup_models.py  test_agents.py  test_api.py
backend/agents/: NANO_BANANA_GUIDE.md  NANO_BANANA_INTEGRATION.md  __init__.py  base_agent.py  edit_manager.py  huggingface_generation_agent.py  image_worker.py  imagen4_agent.py  lon.py  nano_banana_agent.py  orchestrator.py  quality_control.py  qwen_edit_agent.py  qwen_fast_edit_agent.py  qwen_lora_fusion_agent.py  task_analyzer.py  test_nano_banana.py
backend/api/: chat_agent_routes.py  (+6 more)
data/: deep_vision.db
deep_vision/: __init__.py  cli.py  image_editor.py
docker/: Dockerfile  Dockerfile.frontend  docker-compose.yml
examples/: README.md  advanced_integration.py  agent_usage_example.py  basic_usage.py  qwen_agents_usage.py
frontend/: streamlit_app.py
frontend-react/: .env.example  .eslintrc.json  .prettierrc  README.md  SETUP_GUIDE.md  index.html  package-lock.json  package.json  tailwind.config.js  test-generation.html  tsconfig.json  vite.config.ts
static/: index.html
tests/: test_image_editor.py  test_image_utils.py  test_prompt_processor.py
(+33 files in other folders)
