[tool.poetry]
name = "deep-vision"
version = "0.1.0"
description = "Multi-Agent Computer Vision System for Image Enhancement and Generation"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
torch = "^2.1.2"
torchvision = "^0.16.2"
diffusers = "^0.25.1"
transformers = "^4.37.2"
langchain = "^0.1.4"
langgraph = "^0.0.20"
opencv-python = "^4.9.0"
pillow = "^10.2.0"
python-dotenv = "^1.0.0"
loguru = "^0.7.2"
streamlit = "^1.30.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.4"
black = "^24.1.1"
flake8 = "^7.0.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=backend --cov-report=html --cov-report=term"
